// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshot 1`] = `
<button
  class="ant-btn css-dev-only-do-not-override-xogyor css-var-_r_2_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
  type="button"
>
  <span>
    Click
  </span>
</button>
`;

exports[`Button > matches snapshot disabled 1`] = `
<button
  aria-label="x"
  class="ant-btn css-dev-only-do-not-override-xogyor css-var-_r_3_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
  disabled=""
  type="button"
>
  <span>
    Click
  </span>
</button>
`;
